Fix image stretched

--- a/_includes/josh-comeau-reset.css
+++ b/_includes/josh-comeau-reset.css
@@ -18,9 +18,14 @@ body {
 }
 
 /* 5. Improve media defaults */
-img, picture, video, canvas, svg {
+picture, video, canvas, svg {
   display: block;
   max-width: 100%;
+}
+
+img {
+  max-inline-size: 100%;
+  block-size: auto;
 }
 
 /* 6. Remove built-in form typography styles */
